[package]
name = "aoc2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
anyhow = "1"
itertools = "0.10.5"
rayon = "1.6.1"
serde = {version= "1.0", features = ["derive"]}
serde_json = {version ="1.0"}
